--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reach/router": "^1.2.1",
     "@types/react-mailchimp-subscribe": "^2.0.2",
+    "core-js": "^3.6.5",
     "react": "^16.8.0-alpha.0",
     "react-dom": "^16.8.0-alpha.0",
     "react-hot-loader": "^4.3.12",
